made some stuff for adaptive

--- a/src/partials/components/_bottom-header.html
+++ b/src/partials/components/_bottom-header.html
@@ -1,16 +1,16 @@
 <nav class="bottom-header__nav bottom-nav">
-    <ul class="bottom-nav__list">
+    <ul class="bottom-nav__list list-reset dashed-links">
         <li class="bottom-nav__item">
-            <a href="" class="bottom-nav__link">Комплексная поставка</a>
+            <a href="#" class="bottom-nav__link">Комплексная поставка</a>
         </li>
         <li class="bottom-nav__item">
-            <a href="" class="bottom-nav__link">Пуско-наладка IT-оборудования</a>
+            <a href="#" class="bottom-nav__link">Пуско-наладка IT-оборудования</a>
         </li>
         <li class="bottom-nav__item">
-            <a href="" class="bottom-nav__link">Аудит и оптимизация парка печати</a>
+            <a href="#" class="bottom-nav__link">Аудит и оптимизация парка печати</a>
         </li>
         <li class="bottom-nav__item">
-            <a href="" class="bottom-nav__link">Тендеры</a>
+            <a href="#" class="bottom-nav__link">Тендеры</a>
         </li>
     </ul>
 </nav>
