--- a/src/partials/components/_top-header.html
+++ b/src/partials/components/_top-header.html
@@ -6,7 +6,7 @@
     </div>
     <div class="top-header__right">
         <nav class="nav top-header__nav">
-            <ul class="nav__list list-reset">
+            <ul class="nav__list list-reset dashed-links">
                 <li class="nav__item">
                     <a href="#" class="nav__link">Сервисный центр</a>
                 </li>
