--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,47 @@
 <header class="header">
     <div class="header__top top-header">
         <div class="container top-header__container">
-            @include('components/_top-header.html')
+            <div class="top-header__row">
+                <div class="top-header__left">
+                    <a href="#" class="logo">
+                        <img src="../img/logo.png" alt="Логотип" class="logo__img">
+                    </a>
+                </div>
+                <nav class="nav top-header__nav">
+                    <ul class="nav__list list-reset dashed-links">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Сервисный центр</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Доставка и оплата</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Отзывы</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Личный кабинет</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">О компании</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="top-header__info header-info">
+                    <p class="header-info__text">
+                        СВС - надежный поставщик компьютерной техники рядом с вами. 28 лет в Жуковском
+                    </p>
+                    <div class="header-info__actions">
+                        <a href="tel:74957230969" class="header-info__phone">
+                            +7 495 723-09-69
+                        </a>
+                        <button class="header-info__button" type="button">Заказать звонок</button>
+                    </div>
+                </div>
+            </div>
+            <!-- @include('components/_top-header.html') -->
         </div>
     </div>
     <div class="header__center center-header">
@@ -10,7 +50,7 @@
         </div>
     </div>
     <div class="header__bottom bottom-header">
-        <div class="bottom-header__container">
+        <div class="bottom-header__container container">
             @include('components/_bottom-header.html')
         </div>
     </div>
