--- a/src/scss/components/header/_center-header.scss
+++ b/src/scss/components/header/_center-header.scss
@@ -1,32 +1,41 @@
 .center-header {
     &__row {
-        display: flex;
-        column-gap: 94px;
+        @media (min-width: 993px) {
+            display: flex;
+            justify-content: space-between;
+        }
     }
     &__left {
-        flex: 0 1 685px;
-        max-width: 685px;
+        width: 100%;
+        @media (min-width: 993px) {
+            @include adaptive-value('max-width', 685, 300);
+        }
+        @media (max-width: 993px) {
+            margin-bottom: 15px;
+        }
     }
 }
 
 .center-actions {
     display: flex;
+    align-items: center;
+    @media (max-width: 993px) {
+        justify-content: space-evenly;
+    }
+    @include adaptive-value('gap', 74, 0);
     &__link {
         position: relative;
-        display: inline-block;
+        display: inline-flex;
+        align-items: center;
         font-weight: 500;
-        font-size: 18px;
+        @include adaptive-value('font-size', 18, 14);
         color: var(--main-color);
-        &:not(:last-child) {
-            margin-right: 74px;
-        }
         &--sm {
             font-size: 14px;
             text-align: center;
         }
         &--whatsapp {
-            margin-top: -2px;
-            padding-left: 37px;
+            @include adaptive-value('padding-left', 37, 15);
             &::before {
                 content: "";
                 position: absolute;
@@ -35,26 +44,24 @@
                 width: 24px;
                 height: 24px;
                 background: url("../img/whatsapp.png") center no-repeat;
-                background-size: cover;
+                background-size: contain;
             }
-        }
-        &--convert {
-            display: inline-flex;
-            padding-top: 5px;
         }
         &--last {
             font-family: var(--second-font);
-            display: flex;
         }
     }
     &__link-wrapper {
         font-family: var(--second-font);
-        font-size: 16px;
-        margin-top: -10px;
+        @include adaptive-value('font-size',
+        16,
+        14);
         span {
             display: block;
             line-height: 30px;
-            font-size: 20px;
+            @include adaptive-value('font-size',
+            20,
+            14);
         }
     }
     &__icon {
