--- a/src/scss/components/header/_top-header.scss
+++ b/src/scss/components/header/_top-header.scss
@@ -17,7 +17,7 @@
         padding-top: 15px;
         @media (max-width: 993px) {
             grid-column: 12 span;
-            padding-top: 0;
+            padding-top: 20px;
         }
     }
 }
