fixed adaptive bugs

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,6 +7,10 @@
     }
 }
 
+.burger {
+    @include burger;
+}
+
 @import "header/top-header";
 @import "header/header-info";
 @import "header/center-header";
