--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,6 +6,9 @@
                     <a href="#" class="logo">
                         <img src="../img/logo.png" alt="Логотип" class="logo__img">
                     </a>
+                    <button class="burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
+                        <span class="burger__line"></span>
+                    </button>
                 </div>
                 <nav class="nav top-header__nav">
                     <ul class="nav__list list-reset dashed-links">
