--- a/src/scss/components/header/_bottom-header.scss
+++ b/src/scss/components/header/_bottom-header.scss
@@ -13,11 +13,20 @@
     padding: 17px 0;
     &__list {
         display: flex;
-        gap: 117px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        row-gap: 20px;
+    }
+    &__item {
+        @media (max-width: 993px) {
+            max-width: 50%;
+            flex: 0 1 50%;
+            text-align: center;
+        }
     }
     &__link {
         font-weight: 500;
-        font-size: 18px;
+        @include adaptive-value('font-size', 18, 14);
         line-height: 21px;
         text-transform: uppercase;
         color: var(--main-color);
