--- a/src/scss/components/header/_center-header.scss
+++ b/src/scss/components/header/_center-header.scss
@@ -1,16 +1,17 @@
 .center-header {
     &__row {
-        @media (min-width: 993px) {
+        gap: 10px;
+        @media (min-width: 1025px) {
             display: flex;
             justify-content: space-between;
         }
     }
     &__left {
         width: 100%;
-        @media (min-width: 993px) {
+        @media (min-width: 1025px) {
             @include adaptive-value('max-width', 685, 300);
         }
-        @media (max-width: 993px) {
+        @media (max-width: 1025px) {
             margin-bottom: 15px;
         }
     }
@@ -19,7 +20,7 @@
 .center-actions {
     display: flex;
     align-items: center;
-    @media (max-width: 993px) {
+    @media (max-width: 1025px) {
         justify-content: space-evenly;
     }
     @include adaptive-value('gap', 74, 0);
@@ -35,7 +36,7 @@
             text-align: center;
         }
         &--whatsapp {
-            @include adaptive-value('padding-left', 37, 15);
+            padding-left: 37px;
             &::before {
                 content: "";
                 position: absolute;
