added some adaptive styles

--- a/src/partials/components/_center-header.html
+++ b/src/partials/components/_center-header.html
@@ -27,6 +27,7 @@
                     <span>г. Жуковский</span> ул. Московская, 1
                 </span>
             </a>
+            <a href="#" class="center-actions__link center-actions__link--cart"></a>
         </div>
     </div>
 </div>
