--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,7 +1,17 @@
 .logo {
     display: block;
     &__img {
+        display: block;
         max-width: 328px;
         width: 100%;
+        @media (max-width: 769px) {
+            width: 144px;
+            height: 64px;
+            object-fit: contain;
+        }
+        @media (max-width: 540px) {
+            width: 72px;
+            height: 32px;
+        }
     }
 }
