--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,10 +3,10 @@
         <div class="container top-header__container">
             <div class="top-header__row">
                 <div class="top-header__left">
-                    <a href="#" class="logo">
+                    <a href="#" class="header__logo logo">
                         <img src="../img/logo.png" alt="Логотип" class="logo__img">
                     </a>
-                    <button class="burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
+                    <button class="top-header__burger burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
                         <span class="burger__line"></span>
                     </button>
                 </div>
