--- a/src/scss/components/header/_center-header.scss
+++ b/src/scss/components/header/_center-header.scss
@@ -1,9 +1,10 @@
 .center-header {
     &__row {
         gap: 10px;
-        @media (min-width: 1025px) {
-            display: flex;
-            justify-content: space-between;
+        display: flex;
+        justify-content: space-between;
+        @media (max-width: 1025px) {
+            flex-direction: column-reverse;
         }
     }
     &__left {
@@ -23,6 +24,11 @@
     @media (max-width: 1025px) {
         justify-content: space-evenly;
     }
+    @media (max-width: 540px) {
+        flex-wrap: wrap;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+    }
     @include adaptive-value('gap', 74, 0);
     &__link {
         position: relative;
@@ -31,6 +37,9 @@
         font-weight: 500;
         @include adaptive-value('font-size', 18, 14);
         color: var(--main-color);
+        @media (max-width: 540px) {
+            line-height: 1;
+        }
         &--sm {
             font-size: 14px;
             text-align: center;
@@ -46,10 +55,21 @@
                 height: 24px;
                 background: url("../img/whatsapp.png") center no-repeat;
                 background-size: contain;
+                @media (max-width: 540px) {
+                    top: unset;
+                }
+            }
+            @media (max-width: 540px) {
+                font-size: 0;
             }
         }
         &--last {
             font-family: var(--second-font);
+        }
+        &--convert {
+            @media (max-width: 540px) {
+                display: none;
+            }
         }
     }
     &__link-wrapper {
@@ -63,6 +83,9 @@
             @include adaptive-value('font-size',
             20,
             14);
+            @media (max-width: 540px) {
+                line-height: 1;
+            }
         }
     }
     &__icon {
