--- a/src/scss/components/header/_header-info.scss
+++ b/src/scss/components/header/_header-info.scss
@@ -6,11 +6,18 @@
     @media (max-width: 993px) {
         grid-row: 1;
     }
+    @media (max-width: 769px) {
+        justify-content: flex-end;
+    }
     &__actions {
         text-align: right;
-        @media (min-width: 993px) {
-            display: flex;
-            align-items: center;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        width: 100%;
+        @media (max-width: 1030px) {
+            flex-direction: column;
+            align-items: flex-end;
         }
     }
     &__text {
@@ -28,7 +35,7 @@
         display: inline-block;
         font-family: var(--second-font);
         font-weight: 700;
-        @include adaptive-value('font-size', 30, 16);
+        @include adaptive-value('font-size', 30, 18);
         line-height: 37px;
         color: var(--main-color);
         @media (min-width: 993px) {
@@ -47,6 +54,9 @@
             top: 3px;
             background: url("../img/svg/phone.svg") center no-repeat;
             background-size: cover;
+            @media (max-width: 769px) {
+                left: -10px;
+            }
         }
     }
     &__button {
@@ -63,9 +73,13 @@
         font-weight: 700;
         @include adaptive-value('font-size',
         18,
-        14);
+        16);
         line-height: 21px;
         min-height: 37px;
         text-transform: uppercase;
+        @media (max-width: 540px) {
+            max-width: 208px;
+            width: 100%;
+        }
     }
 }
