--- a/src/scss/components/header/_top-header.scss
+++ b/src/scss/components/header/_top-header.scss
@@ -11,6 +11,21 @@
     &__left {
         padding-right: 20px;
         grid-column: 3 span;
+        @media (max-width: 769px) {
+            padding-right: 0;
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: flex-end;
+            align-items: center;
+        }
+        @media (max-width: 769px) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
+    &__burger {
+        margin-right: 20px;
+        flex-shrink: 0;
     }
     &__nav {
         grid-column: 9 span;
@@ -18,6 +33,9 @@
         @media (max-width: 993px) {
             grid-column: 12 span;
             padding-top: 20px;
+        }
+        @media (max-width: 540px) {
+            display: none;
         }
     }
 }
